fixes z-index on sidebar and fancybox

--- a/css/master.css
+++ b/css/master.css
@@ -313,7 +313,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 8020;
+  z-index: 10020;
 }
 .fancybox-skin {
   position: relative;
@@ -324,7 +324,7 @@ body {
   border-radius: 2px;
 }
 .fancybox-opened {
-  z-index: 8030;
+  z-index: 10030;
 }
 .fancybox-opened .fancybox-skin {
   -webkit-box-shadow: 0 10px 25px rgba(0,0,0,0.5);
@@ -367,7 +367,7 @@ body {
   width: 36px;
   height: 36px;
   cursor: pointer;
-  z-index: 8040;
+  z-index: 10040;
 }
 .fancybox-nav {
   position: absolute;
@@ -377,7 +377,7 @@ body {
   cursor: pointer;
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  z-index: 8040;
+  z-index: 10040;
 }
 .fancybox-nav span {
   position: absolute;
@@ -386,7 +386,7 @@ body {
   height: 34px;
   margin-top: -18px;
   cursor: pointer;
-  z-index: 8040;
+  z-index: 10040;
   visibility: hidden;
 }
 .fancybox-nav:hover span {
@@ -434,7 +434,7 @@ body {
   left: 0;
   overflow: hidden;
   display: none;
-  z-index: 8010;
+  z-index: 10010;
   background: rgba(0,0,0,0.2);
   -webkit-transition: background 5s ease-out;
   transition: background 5s ease-out;
@@ -449,14 +449,14 @@ body {
   font: normal 13px/20px 'Open Sans', Helvetica, Helvetica, Arial, sans-serif;
   position: relative;
   text-shadow: none;
-  z-index: 8050;
+  z-index: 10050;
 }
 .fancybox-title-float-wrap {
   position: absolute;
   bottom: 0;
   right: 50%;
   margin-bottom: -35px;
-  z-index: 8050;
+  z-index: 10050;
   text-align: center;
 }
 .fancybox-title-float-wrap .child {
